<resources>
    <string name="app_name">Child-Control-App</string>

    <!--Common -->
    <string name="child_control">Protect your child!!</string>
    <string name="parent_tag_line">Join today to monitor your childs online activity</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="about">About</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="enter_username">Username</string>
    <string name="parent_username">Parent Username</string>
    <string name="parent_email">Parent Email</string>
    <string name="enter_password">Password</string>
    <string name="parent_password">Parent Password</string>
    <string name="enter_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_fullname">Full Name</string>
    <string name="username_title">UserName</string>
    <string name="children">Children</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>