<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".parent.ParentHomepage"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Profile"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:fontFamily="@font/muli_black"
            ></TextView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:textSize="20sp"
            android:text="@string/username_title"
            android:textAllCaps="true"
            ></TextView>
            <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/muli_light"
                android:textSize="15sp"
                android:text="@string/username_title"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli_black"
                android:textSize="20sp"
                android:text="@string/enter_email"
                android:textAllCaps="true"
                ></TextView>
            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/muli_light"
                android:textSize="15sp"
                android:text="@string/enter_email"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli_black"
                android:textSize="20sp"
                android:text="@string/children"
                android:textAllCaps="true"
                ></TextView>
            <TextView
                android:id="@+id/profile_children"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/muli_light"
                android:textSize="15sp"
                android:text="@string/enter_email"
                ></TextView>

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/user_profile"></ImageView>

    </RelativeLayout>

    </LinearLayout>

</ScrollView>